syntax = "proto3";

package system;

import "api.proto";
import "common.proto";

// BusinessKeyListResponse contains a list of business keys.
message BusinessKeyListResponse {
  repeated string list = 1;
}

// SystemOptionItem represents a key-value pair in system options.
message SystemOptionItem {
  string key = 1;
  string value = 2;
}

// SystemConfig contains parsed system configuration data.
message SystemConfig {
  repeated SystemOptionItem system_options = 1;
}

// RealtimeConfigEntry represents a single config entry in realtime config.
message RealtimeConfigEntry {
  string name = 1;
  string alias = 2;
  string type = 3;
  string content = 4;
  string remark = 5;
}

// RealtimeResponse is the response for realtime config endpoint.
// This response format must remain unchanged for backward compatibility.
message RealtimeResponse {
  repeated string business_keys = 1;
  map<string, RealtimeConfigEntry> system = 2;
  // Additional business configs are added dynamically
}

// SystemService handles system-level operations.
service SystemService {
  // BusinessKeys returns all available business keys.
  // DEPRECATED: Use environment and pipeline management instead.
  rpc BusinessKeys(common.Empty) returns (BusinessKeyListResponse) {
    option (api.get) = "/api/v1/system/business-keys";
  }

  // Realtime returns realtime static configuration.
  // This endpoint's response structure must remain unchanged for backward compatibility.
  rpc Realtime(common.Empty)   returns (RealtimeResponse) {
    option (api.get) = "/api/v1/system/realtime";
  }

  // Health returns server health status.
  rpc Health(common.Empty) returns (common.OperateResponse) {
    option (api.get) = "/api/v1/system/health";
  }
}
